finshed implementing app

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div id="time">06:35:00</div>
         <div id="date">Monday, 1 May, 2023</div>
     </div>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
